--- a/app/views/experiment/video.html.haml
+++ b/app/views/experiment/video.html.haml
@@ -1,8 +1,8 @@
+- urls = ['http://d323anfiww5kx7.cloudfront.net/video+one+part+one.mp4', 'http://d323anfiww5kx7.cloudfront.net/music+prompt.mp4','http://d323anfiww5kx7.cloudfront.net/weekend+plans.mp4','http://d323anfiww5kx7.cloudfront.net/spring+break.mp4', 'http://d323anfiww5kx7.cloudfront.net/final+video.mp4']
 .video-page
 	.video-container
-		%video{width: '1920', height: '1080', controls: true}
-			%source{src: 'http://d323anfiww5kx7.cloudfront.net/weekend+plans.mp4', type: 'video/mp4'}
-
+		%video{width: '1920', height: '1080', controls: false, autoplay: true}
+			%source{src: urls[id.to_i - 1], type: 'video/mp4'}
 	%input{class: 'hidden', autofocus: true}
 	.button{class: 'disabled hidden'}
 		Submit
@@ -16,13 +16,18 @@
 		}
 	});
 
+	id = #{id}
+
 	video = $('video')[0];
 
 	video.onended = function () {
-		$('input, .button').removeClass('hidden');
+		if (id != '5') {
+			$('input, .button').removeClass('hidden');
+		} else {
+			$('.button').removeClass('hidden disabled')
+			$('.button').text('Continue')
+		}
 	}
-
-	var id = #{id}
 
 	$('.button').click(function() {
 		var data = {}
@@ -31,8 +36,8 @@
 		data[key] =  userResponse;
 		$.post('/update', data, function (response) {
 			if (response['success'] == true) {
-				if (id == 4) {
-					window.location = window.location.origin + '/form';
+				if (id == 5) {
+					window.location = window.location.origin + '/video_form';
 				} else {
 					id += 1;
 					window.location = window.location.origin + '/video/' + id;
