Change wording and link to emotional_form_instructions

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -17,8 +17,9 @@ body {
 
 .container {
 	width: 60%;
-	margin-left: 20%;
-	margin-top: 80px;
+  max-width: 32em;
+	margin: 0 auto;
+	margin-top: 10em;
 }
 
 .button {
@@ -280,7 +281,7 @@ input[type="radio"] + label span {
   height: 20px;
   margin-right: 1em;
   vertical-align: middle;
-  border: 2px solid $limewire;
+  border: 1px solid $limewire;
   border-radius: 20px;
   cursor:pointer;
 
