--- a/app/views/experiment/instructions.html.haml
+++ b/app/views/experiment/instructions.html.haml
@@ -1,9 +1,7 @@
 .container
 	.text
 		%p
-			Farm-to-table normcore gastropub bespoke yr, fixie whatever wayfarers affogato master cleanse. Meh kinfolk keffiyeh, stumptown mixtape before they sold out tattooed freegan wayfarers ugh green juice pickled. 90's skateboard williamsburg pickled, lo-fi irony pork belly hammock viral flannel franzen authentic locavore polaroid. Tofu quinoa sriracha, tumblr pickled poutine meggings gentrify 3 wolf moon kombucha brooklyn fingerstache taxidermy artisan salvia. Waistcoat vice migas chicharrones ethical, whatever health goth actually. 
-		%p
-			Cronut meditation narwhal taxidermy, post-ironic biodiesel sriracha next level fixie 90's tilde salvia. Fashion axe DIY kinfolk, celiac lumbersexual marfa salvia PBR&B four dollar toast trust fund post-ironic. Small batch portland synth wolf photo booth VHS leggings. Selfies mlkshk fingerstache, street art affogato kickstarter health goth umami stumptown.
+			This experiment will test cognition. Once you click 'Begin Experiment', please be advised that a video will start playing. This will take approximately 20 minutes to complete. Thank you in advance for your cooperation and participation.
 	.button
 		Begin Experiment
 
