--- a/app/views/experiment/emotional_form.html.haml
+++ b/app/views/experiment/emotional_form.html.haml
@@ -1,3 +1,9 @@
+.help-button
+	%span
+		Instructions
+	.modal{class: 'hidden'}
+		Answer the following way: People who agree with _______ (Question) 
+		are much more likely than those who disagree to agree with _______ (Answer)
 .emotional-form-container
 	.question
 	.answers
@@ -8,4 +14,5 @@
 					%span
 	.button{class: 'disabled'}
 		Next
+
 = javascript_include_tag 'emotional-form'
