--- a/app/views/experiment/video.html.haml
+++ b/app/views/experiment/video.html.haml
@@ -1,4 +1,4 @@
-- urls = ['http://d323anfiww5kx7.cloudfront.net/video+one+part+one.mp4', 'http://d323anfiww5kx7.cloudfront.net/music+prompt.mp4','http://d323anfiww5kx7.cloudfront.net/weekend+plans.mp4','http://d323anfiww5kx7.cloudfront.net/spring+break.mp4', 'http://d323anfiww5kx7.cloudfront.net/final+video.mp4']
+- urls = ['http://d323anfiww5kx7.cloudfront.net/video+one+part+one+final.mp4', 'http://d323anfiww5kx7.cloudfront.net/music+prompt.mp4','http://d323anfiww5kx7.cloudfront.net/weekend+plans+final.mp4','http://d323anfiww5kx7.cloudfront.net/spring+break+final.mp4', 'http://d323anfiww5kx7.cloudfront.net/final+video.mp4']
 .video-page
 	.video-container
 		%video{width: '1920', height: '1080', controls: false, autoplay: true}
