Add proxima nova from typekit

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-	font-family: 'Proxima Nova', 'Museo Sans';
+	font-family: 'proxima-nova', 'Museo Sans';
 	font-size: 1.4rem;
   line-height: 2.1rem;
   width: 100%;
