--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>CognitionWebsite</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="https://use.typekit.net/jxb3fsv.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
   <%= csrf_meta_tags %>
 </head>
 <body>
